--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -2,19 +2,23 @@
     <div class="col">
         <h1>*ngIf</h1>
         <hr>
-        <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
+        <div *ngIf="mostrar" class="card text-bg-primary mb-3" style="width: 100%;">
             <div class="card-body">
-              <h5 class="card-title">Primary card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">{{ frase.autor }}</h5>
+                <p class="card-text">{{ frase.mensaje }}</p>
             </div>
-          </div>
-          <button class="btn btn-outline-primary">
+        </div>
+
+        <button (click)= " mostrar = !mostrar " class="btn btn-outline-primary" style="width: 100%;">
             Mostrar/Ocultar
-          </button>
+        </button>
     </div>
-    
+
     <div class="col">
         <h1>*ngFor</h1>
         <hr>
+        <ul class="list-group">
+            <li *ngFor= "let pj of personajes; let i = index" class="list-group-item">{{ i+1 }} - {{pj}}</li>
+        </ul>
     </div>
 </div>
